# extended-gaussian

./: .gitignore  CMakeLists.txt  README.md
cmake/linux/: dependencies.cmake
docs/: build_guide_ko.md
manifests/: mc_small_aerial_c36_cell20_neighbors_only.json  mc_small_aerial_c36_neighbors_3x3.json  scene_W2_4_3_xz10_aabb_neighbors_3x3.json  scene_W2_4_3_xz10_contract_tight_neighbors_xyz1.json
src/: CMakeLists.txt
src/core/graphics/: Window.cpp
src/core/raycaster/: Raycaster.cpp  Raycaster.hpp
src/core/system/: Config.hpp  Utils.cpp
src/core/video/: FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.hpp  VideoUtils.hpp
src/projects/extended_gaussian/apps/: CMakeLists.txt
src/projects/extended_gaussian/apps/extended_gaussianUserViewer/: CMakeLists.txt  main.cpp
src/projects/extended_gaussian/apps/extended_gaussianViewer/: CMakeLists.txt  main.cpp
src/projects/extended_gaussian/renderer/: CMakeLists.txt  ExtendedGaussianViewer.cpp  ExtendedGaussianViewer.hpp
src/projects/extended_gaussian/renderer/cuda/: TransformKernels.cu  TransformKernels.cuh
src/projects/extended_gaussian/renderer/patches/: cuda_rasterizer_max_splat_radius.patch
src/projects/extended_gaussian/renderer/resource/: GaussianField.hpp  GaussianLoader.cpp  GaussianLoader.hpp  ManifestStore.cpp  ManifestStore.hpp  ResourceManager.cpp  ResourceManager.hpp
tools/: cl-wrapper.cmd  generate_cell_neighbor_manifest.py
tools/windows/: build_windows_portable_bundle.ps1  check_windows_runtime.ps1  package_windows_portable_bundle.ps1  run_installed_viewer.cmd  run_portable_bundle.cmd
(+19 files in other folders)
